# lightrag-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml  skills-lock.json
.specs/: STATE.md
.specs/features/mcp_server/: context.md  design.md  spec.md  tasks.md  validation.md
docs/: UpdatePipeline.md  network_configuration.md
src/lightrag_mcp/: __init__.py  client.py  config.py  server.py
tests/: test_client.py  test_config.py  test_server.py
