[project]
name = "lightrag-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonio Moreira", email = "antonionmoreira@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
lightrag-mcp = "lightrag_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
